@@ -12,8 +12,8 @@ import yaml
 ##### Natural Resources Institute Finland (Luke)
 ##### This pipeline is build upon the the GBS-SNP-CROP pipeline:
 ##### https://github.com/halelab/GBS-SNP-CROP
-##### Version: 0.17.42
-version = "0.17.42"
+##### Version: 0.17.50
+version = "0.17.50"
 
 ##### set minimum snakemake version #####
 min_version("6.0")
